--- a/package.json
+++ b/package.json
@@ -20,15 +20,22 @@
   "scripts": {
     "build": "tsc && vite build",
     "test": "npm run build && playwright test",
+    "test:unit": "vitest run",
+    "test:unit:coverage": "vitest run --coverage",
     "lint": "aegir lint",
     "lint:fix": "aegir lint --fix",
     "example": "npm run build && echo 'Visit http://localhost:3000/example/' && CI=1 npx vite"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.1",
+    "@types/node": "^22.7.8",
+    "@vitest/coverage-istanbul": "^2.1.3",
     "aegir": "^44.1.4",
     "playwright": "^1.48.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5",
     "vite": "^5.4.9",
-    "vite-plugin-dts": "^4.2.4"
+    "vite-plugin-dts": "^4.2.4",
+    "vitest": "^2.1.3"
   }
 }
