--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "strict": true,
     "esModuleInterop": true,
     "outDir": "dist",
-    "types": ["node", "mocha"],
+    "types": ["node", "mocha", "vitest/globals"],
     "useDefineForClassFields": true,
     "skipLibCheck": true,
     "moduleResolution": "bundler",
