--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "license": "MIT",
   "keywords": [
     "buffer channel",
-    "typescript"
+    "typescript",
+    "web worker",
+    "transferable objects"
   ],
   "eslintConfig": {
     "extends": "ipfs",
@@ -19,7 +21,7 @@
   },
   "scripts": {
     "build": "tsc && vite build",
-    "test": "npm run build && playwright test",
+    "test": "npm run test:unit",
     "test:unit": "vitest run",
     "test:unit:coverage": "vitest run --coverage",
     "lint": "aegir lint",
@@ -27,11 +29,9 @@
     "example": "npm run build && echo 'Visit http://localhost:3000/example/' && CI=1 npx vite"
   },
   "devDependencies": {
-    "@playwright/test": "^1.48.1",
     "@types/node": "^22.7.8",
     "@vitest/coverage-istanbul": "^2.1.3",
     "aegir": "^44.1.4",
-    "playwright": "^1.48.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "vite": "^5.4.9",
