--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "test:unit:coverage": "vitest run --coverage",
     "lint": "aegir lint",
     "lint:fix": "aegir lint --fix",
-    "example": "npm run build && echo 'Visit http://localhost:3000/example/' && CI=1 npx vite"
+    "example": "npm run build && echo 'Visit http://localhost:3000/example/' && CI=1 npx vite",
+    "depcheck": "aegir dep-check"
   },
   "devDependencies": {
     "@types/node": "^22.7.8",
     "@vitest/coverage-istanbul": "^2.1.3",
     "aegir": "^44.1.4",
-    "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "vite": "^5.4.9",
     "vite-plugin-dts": "^4.2.4",
